--- a/language/Python/index.html
+++ b/language/Python/index.html
@@ -58,7 +58,7 @@
         <h2>Chapitres disponibles</h2>
 
         <!-- Section Installation -->
-                 <div class="section-divider">
+        <div class="section-divider">
             <h3 class="section-divider__title">Installer python</h3>
         </div>
         <ul class="cards">
@@ -81,20 +81,217 @@
 
         <ul class="cards">
             <li class="card card-python">
-                <div>Votre premier script Python</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                <div>Votre premier script Python</div><a href="chapitres/4-premier-script.html">Commencer</a>
+            </li>
+            <li class="card card-python">
+                <div>Les variables</div><a  href="chapitres/5-variables.html">Commencer </a>
+            </li>
+            <li class="card card-python">
+                <div>Les types de données</div><a href="chapitres/6-types-donnees.html">Commencer</a>
+            </li>
+            <li class="card card-python">
+                <div>Les chaînes de caractères</div><a style="pointer-events:none;opacity:0.6;">Commencer
                     (Indisponible)</a>
             </li>
+            <li class="card card-python">
+                <div>Les nombres et opérations</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Les commentaires</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Les conditions (if / else)</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Les opérateurs de comparaison</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Les opérateurs logiques</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Les boucles while</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Les boucles for</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>La fonction range()</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Les fonctions définies</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Les paramètres et retours</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Les listes</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Les tuples</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Les dictionnaires</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Les ensembles (sets)</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Parcourir une liste</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Les compréhensions de liste</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Concaténation et répétition</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Manipulation de chaînes</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Conversion de types</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Entrée utilisateur</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Formatage de chaînes</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Introduction aux modules</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Importation de modules</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>math et random</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Les erreurs courantes</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Gestion des erreurs (try/except)</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Fichiers texte (lecture)</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Fichiers texte (écriture)</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Context manager (with)</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Les arguments *args et **kwargs</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Fonctions lambda</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Map, filter et reduce</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Expressions booléennes</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Le mot-clé pass</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Le mot-clé global</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Les docstrings</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Tri et recherche dans les listes</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Comprendre None</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Déboguer avec print()</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Déboguer avec un IDE</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Indentation en Python</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Style de code (PEP8)</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Les annotations de type</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Les assertions</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Itérateurs et générateurs</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Compréhension de dictionnaires</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Manipulation de dates</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Les objets datetime</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Introduction à la POO</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Classes et objets</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Constructeurs et méthodes</div><a style="pointer-events:none;opacity:0.6;">Commencer
+                    (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Héritage simple</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Encapsulation</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Polymorphisme</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+            <li class="card card-python">
+                <div>Les décorateurs</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+            </li>
+
 
             <!-- ... autres cartes de la section Bases ... -->
         </ul>
 
 
-       
+
 
 
 
         <h2>Projets pratiques</h2>
-        <ul class="cards">
+        <ul class=" cards">
             <li class="card card-python">
                 <div>Jeu du pendu</div>
                 <a href="projets/pendu/" style="pointer-events:none;opacity:0.6;">Voir le projet (Indisponible) </a>
