--- a/index.html
+++ b/index.html
@@ -59,16 +59,17 @@
                 <div>Python </div>
                 <a href="language/Python/index.html">Accédez à Python</a>
             </li>
+                        <li class="card card-html">
+                <div>HTML</div>
+                <a href="language/Html/index.html" >Accédez à HTML</a>
+            </li>
             <li class="card card-php">
                 <div>PHP</div>
                 <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à PHP (Indisponible)
                 </a>
 
             </li>
-            <li class="card card-html">
-                <div>HTML</div>
-                <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à HTML (Indisponible)</a>
-            </li>
+
             <li class="card card-css">
                 <div>CSS</div>
                 <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à CSS (Indisponible)</a>
