--- a/language/Html/index.html
+++ b/language/Html/index.html
@@ -46,7 +46,7 @@
         </section>
 
         <div class="navigation-buttons">
-            <a href="../../../" class="button button-secondary">← Retour à l'accueil</a>
+            <a href="../../" class="button button-secondary">← Retour à l'accueil</a>
         </div>
 
         <h2>Chapitres disponibles</h2>
