--- a/language/Python/index.html
+++ b/language/Python/index.html
@@ -51,7 +51,7 @@
 
 
         <div class="navigation-buttons">
-            <a href="../../../" class="button button-secondary">← Retour à l'accueil</a>
+            <a href="../../" class="button button-secondary">← Retour à l'accueil</a>
 
         </div>
 
