--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </li>
             <li class="card card-php">
                 <div>PHP</div>
-                <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à PHP (Indisponible)
+                <a href="language/PHP/index.html" >Accédez à PHP 
                 </a>
 
             </li>
