--- a/language/Html/index.html
+++ b/language/Html/index.html
@@ -58,10 +58,10 @@
         <ul class="cards">
             <li class="card card-html">
                 <div>Structure de base d'un document HTML</div><a
-                    href="chapitres/1-structure.html" style="pointer-events:none;opacity:0.6;">Commencer (Indisponible) </a>
+                    href="chapitres/1-structure.html" >Commencer </a>
             </li>
             <li class="card card-html">
-                <div>Balises et éléments</div><a href="chapitres/2-balises.html" style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+                <div>Balises et éléments</div><a href="chapitres/2-balises.html">Commencer</a>
             </li>
             <li class="card card-html">
                 <div>Attributs HTML</div><a href="chapitres/3-attributs.html" style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
