--- a/language/Html/index.html
+++ b/language/Html/index.html
@@ -64,7 +64,7 @@
                 <div>Balises et éléments</div><a href="chapitres/2-balises.html">Commencer</a>
             </li>
             <li class="card card-html">
-                <div>Attributs HTML</div><a href="chapitres/3-attributs.html" style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+                <div>Attributs HTML</div><a href="chapitres/3-attributs.html">Commencer </a>
             </li>
         </ul>
 
@@ -75,13 +75,13 @@
 
         <ul class="cards">
             <li class="card card-html">
-                <div>En-têtes et paragraphes</div><a href="chapitres/4-textes.html" style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+                <div>En-têtes et paragraphes</div><a href="chapitres/4-textes.html">Commencer </a>
             </li>
             <li class="card card-html">
-                <div>Listes ordonnées et non ordonnées</div><a  href="chapitres/5-listes.html" style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+                <div>Listes ordonnées et non ordonnées</div><a  href="chapitres/5-listes.html">Commencer </a>
             </li>
             <li class="card card-html">
-                <div>Liens hypertextes</div><a href="chapitres/6-liens.html" style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
+                <div>Liens hypertextes</div><a href="chapitres/6-liens.html" >Commencer </a>
             </li>
             <li class="card card-html">
                 <div>Images</div><a style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
