--- a/language/PHP/index.html
+++ b/language/PHP/index.html
@@ -58,13 +58,13 @@
         <ul class="cards">
             <li class="card card-php">
                 <div>Installation de PHP sur Windows</div><a
-                    href="chapitres/1-installation-windows.php">Commencer</a>
+                    href="chapitres/1-installation-windows.html">Commencer</a>
             </li>
             <li class="card card-php">
-                <div>Installation de PHP sur Linux</div><a href="chapitres/2-installation-linux.php">Commencer</a>
+                <div>Installation de PHP sur Linux</div><a href="chapitres/2-installation-linux.html">Commencer</a>
             </li>
             <li class="card card-php">
-                <div>Installation de PHP sur macOS</div><a href="chapitres/3-installation-mac.php">Commencer</a>
+                <div>Installation de PHP sur macOS</div><a href="chapitres/3-installation-mac.html">Commencer</a>
             </li>
         </ul>
 
@@ -75,13 +75,13 @@
 
         <ul class="cards">
             <li class="card card-php">
-                <div>Votre premier script PHP</div><a href="chapitres/4-premier-script.php">Commencer</a>
+                <div>Votre premier script PHP</div><a href="chapitres/4-premier-script.html" style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
             </li>
             <li class="card card-php">
-                <div>Les variables</div><a href="chapitres/5-variables.php">Commencer</a>
+                <div>Les variables</div><a href="chapitres/5-variables.html" style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
             </li>
             <li class="card card-php">
-                <div>Les types de données</div><a href="chapitres/6-types-donnees.php">Commencer</a>
+                <div>Les types de données</div><a href="chapitres/6-types-donnees.html" style="pointer-events:none;opacity:0.6;">Commencer (Indisponible)</a>
             </li>
             <li class="card card-php">
                 <div>Les chaînes de caractères</div><a style="pointer-events:none;opacity:0.6;">Commencer
@@ -221,9 +221,9 @@
         <section>
             <h2>Ressources PHP</h2>
             <ul class="resources">
-                <li class="resource-card"><a href="https://www.php.net/manual/fr/" target="_blank">Documentation Officielle</a></li>
+                <li class="resource-card"><a href="https://www.html.net/manual/fr/" target="_blank">Documentation Officielle</a></li>
                 <li class="resource-card"><a href="https://phptherightway.com/" target="_blank">PHP The Right Way</a></li>
-                <li class="resource-card"><a href="https://www.php.net/manual/fr/tutorial.php" target="_blank">Tutoriel PHP.net</a></li>
+                <li class="resource-card"><a href="https://www.html.net/manual/fr/tutorial.html" target="_blank">Tutoriel PHP.net</a></li>
                 <li class="resource-card"><a href="https://laracasts.com/" target="_blank">Laracasts</a></li>
             </ul>
         </section>
